package thesis.project.classes;

public enum SeatName {
    NORTH,
    SOUTH,
    EAST,
    WEST
}
